crates/rehearse/tests/ui/pipeline/fail/bad_return.rs
use rehearse::pipeline;

#[pipeline]
fn bad() -> u32 {
    1
}

fn main() {}

